[tool.poetry]
name = "liyafei"
version = "0.1.0"
description = ""
authors = ["liyafei <liyafei@sensetime.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
lxml = "^4.6.3"
SQLAlchemy = "^1.4.23"
mysql = "^0.0.3"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
